# BFileX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: App.cpp  App.hpp  AppState.cpp  AppState.hpp  BFileX.cpp  BFileX.hpp  BfileX.cpp  CommandLineParser.cpp  CommandLineParser.hpp  FileManager.cpp  FileManager.hpp  FilePreview.cpp  FilePreview.hpp  FileProperties.cpp  FileProperties.hpp  InputHandler.cpp  InputHandler.hpp  Preview.cpp  UI.cpp  UI.hpp  main.cpp
src/include/: App.hpp  AppState.hpp  BFileX.hpp  CommandLineParser.hpp  FileManager.hpp  FilePreview.hpp  FileProperties.hpp  InputHandler.hpp  Preview.hpp  UI.hpp  debug.hpp
